# UpGuardian

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  build.rs  deny.toml  fly.toml
.github/workflows/: fly_deploy.yml
.sqlx/: query-02d3e87e4678c1327f3af0348bf1f5a143de163ede8a941ed9be8bd240f3c7df.json  query-05407e1b245b9cbca43bd267fb9098bd970b860883dfc7efa3f70f5964c67941.json  query-0c6f3acb07955ac126be525d88ef14545ba6ac15c30ad80acbe56a372d06c2eb.json  query-110727bf8db2b15e50a755397eef76df66ef4963fe7dd8e6818d778de132ab7c.json  query-29c3cfac36bc7e37679121d24a7a008a7bd66b76f9df17d88f8218af5e6bb645.json  query-30ab409af704104583797cc9be3b81c5c3ddfe9af7b0c649691261e4d54fb6eb.json  query-391ebef90813bc740f7d4499c8df1aa8ca729a0e675d3d5b6c00821e2e346fcd.json  query-3c76b7c355e5bd0c0a40f9d6d177ddcbe931713dcaf6d6ec190f9755d6b19573.json  query-3d69d5803380503e9ebbdc33cbcef3a8b66c98dacbe3791a1c32948a736a13b6.json  query-48cc3ac9b03a48c5196b265c087b0a482515d2991c224fe4390b3278c85f126b.json  query-5542313346f10db0627a2c6bcb893ee16d6df3433612f72f879efc87c5111e41.json  query-8f8885468259004d1a1bb8ff93a103fbd50672c784f8d5431bf6cab217a44293.json  query-94e054ec4db6cdfc9d76d3989dd5a52a5f6a3bbd958cc107957390d4430fa543.json  query-9c6e74b0775c80032dbb501e34c61e36dc5a293f3d2723d7559f0aedb8c6222f.json  query-a0c4c3f2d3ad72d45ae3f4529f6e74ca3f1d5cfa557fe9efe19c47d4481a76fa.json  query-a59517a6694c9fc5f5ca0e73167d736d339c9b3b8bb355ebacb1f60b2cdb657b.json  query-bf7b19943512e8e3f242005934bec0b8b50553270e00decb2e849eda31eaca03.json  query-c092a3d43031717c33e8fba8045f88fee6e0321835568227f909d67bb81803f1.json  query-c5943de26108580a0b0634249924f43ad5547d4f0c24220bae3e7e94ab6621ef.json  query-cea15767c02453c0fdac99f24eece2959741ccd15196c7db0ed90a453248caf0.json  query-d54c02c66c81ee70f6a81ee657d52eb2a5379f0cdd38732486a59d2fe8f480c7.json  query-e9d6f6ec74438bd953a17bb328f3ea012fa56cbf3dcad3cc37f1e4f2395f09d1.json  query-f7bbafce01a64cd7a1a5412f54cc1e2d200c53efa05d571b0b7eff5010cd4bc6.json  query-fc2c0010c738e7243272d6fe82dff58b8e3b9818fc2038a984946c285d880523.json
end2end/: playwright.config.ts
end2end/playwright-report/: index.html
frontend/: index.ts
migrations/: 20240112015944_AddUsers.sql  20240112020226_AddSessions.sql  20240121034130_AddIsActiveSponsorToUser.sql  20240121034401_CreateUniqueIndexOnIDAId.sql  20240121181922_CreateSitesTable.sql  20240121190720_CreatePagesTable.sql  20240121192153_CreateCheckin.sql  20240314020654_AddDurationToCheckin.down.sql  20240314020654_AddDurationToCheckin.up.sql
src/: app.rs  app_state.rs  cron.rs  extractors.rs  lib.rs  main.rs  setup.rs  templates.rs
src/app/: current_user.rs  sidebar.rs  utils.rs
src/app/sites/: index.rs  mod.rs
src/jobs/: create_checkin.rs  hello.rs  mod.rs
src/routes/: home.rs  login.rs  mod.rs
src/routes/current_user/: mod.rs  pages.rs  sites.rs
status-leptos/: Cargo.toml  Procfile  tailwind.config.js
status-leptos/end2end/tests/: example.spec.ts
status-leptos/src/: app.rs  main.rs
status-leptos/style/: tailwind.css
