[package]
name = "status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.7", features = ["fancy"] }

tokio = { version = "1.21", features = ["full"] }

tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
opentelemetry = { version = "0.19.0", features = [
  "rt-tokio",
], default-features = false }
opentelemetry-otlp = { version = "0.12.0", features = [
  "http-proto",
  "reqwest-rustls",
  "reqwest-client",
], default-features = false }
sentry = { version = "0.31.5", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.31.5", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.25.0", features = ["axum"] }

async-trait = "0.1.60"
axum = "0.6.2"
axum-macros = "0.3.1"

reqwest = { version = "0.11.22", features = [
  "json",
  "rustls-tls",
], default-features = false }
