[package]
name = "status"
version = "0.1.0"
edition = "2021"
license = "private"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.7", features = ["fancy"] }

tokio = { version = "1.21", features = ["full"] }

tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
opentelemetry = { version = "0.19.0", features = [
  "rt-tokio",
], default-features = false }
opentelemetry-otlp = { version = "0.12.0", features = [
  "http-proto",
  "reqwest-rustls",
  "reqwest-client",
], default-features = false }
sentry = { version = "0.31.5", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.31.5", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.25.0", features = [
], git = "https://github.com/lambda-fairy/maud", rev = "320add87a12d8e5be115de9e0fe3f4b331512a4a" }

async-trait = "0.1.60"
axum = "0.7.4"
axum-macros = "0.4.0"

reqwest = { version = "0.11.22", features = [
  "json",
  "rustls-tls",
], default-features = false }
jsonwebtoken = "9.1.0"
chrono = "0.4.31"

cja = { version = "0.0.0", git = "https://github.com/coreyja/coreyja.com", branch = "main" }
futures = "0.3.30"
sqlx = "0.7.3"
uuid = { version = "1.6.1", features = ["v4"] }
tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
mime_guess = "2.0.4"
include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
humantime = "2.1.0"
